--- a/www.nass.gov.ng/49cae770a52a5d7056c88ae0f689f06fb0e7bc25.yml
+++ b/www.nass.gov.ng/49cae770a52a5d7056c88ae0f689f06fb0e7bc25.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 12:49:36 GMT
+    - Tue, 20 Jun 2017 08:51:36 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=-Bx6-rwMdPlBPDiK-OVM%2C0; path=/
+    - PHPSESSID=KU7AJ93RQx1kvERkOjZ7j0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 12:49:36 GMT
+recorded_at: Tue, 20 Jun 2017 08:51:36 GMT
