--- a/www.nass.gov.ng/e9b4cee69bbfb51e65473160f50add380372a85f.yml
+++ b/www.nass.gov.ng/e9b4cee69bbfb51e65473160f50add380372a85f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 12:52:40 GMT
+    - Tue, 20 Jun 2017 08:54:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=yk5srRiHw3FMz1HbzUBD%2C0; path=/
+    - PHPSESSID=RmJYaEO7efEjQ-VgxsMfj1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 12:52:40 GMT
+recorded_at: Tue, 20 Jun 2017 08:54:40 GMT
