--- a/www.nass.gov.ng/5f7e182f93236398013f1906aab476a60bc043c1.yml
+++ b/www.nass.gov.ng/5f7e182f93236398013f1906aab476a60bc043c1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 12:53:06 GMT
+    - Tue, 20 Jun 2017 08:55:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=AhCnYDigyws6MVqEB3e%2CM1; path=/
+    - PHPSESSID=EwMjhUWFd7Zgz907FhILT2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 12:53:06 GMT
+recorded_at: Tue, 20 Jun 2017 08:55:44 GMT
