--- a/www.nass.gov.ng/1df88f969f1c9d83b550f8cb4c1904ff50bf8176.yml
+++ b/www.nass.gov.ng/1df88f969f1c9d83b550f8cb4c1904ff50bf8176.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 12:53:25 GMT
+    - Tue, 20 Jun 2017 08:56:02 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=rKSzUaqgm96MGRVM%2CTsiD1; path=/
+    - PHPSESSID=qmyscPbBsDhppIqney9Dr3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 12:53:25 GMT
+recorded_at: Tue, 20 Jun 2017 08:56:02 GMT
