--- a/www.nass.gov.ng/e75f63f26d813a4b33f1630fe8bfc6bd9e4da943.yml
+++ b/www.nass.gov.ng/e75f63f26d813a4b33f1630fe8bfc6bd9e4da943.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 12:59:00 GMT
+    - Tue, 20 Jun 2017 09:01:19 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=xUCrr%2C-tJgAsSXyhYVbte1; path=/
+    - PHPSESSID=M4WHmlnPBSN5iKwB4nt4a3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 12:59:00 GMT
+recorded_at: Tue, 20 Jun 2017 09:01:19 GMT
