200 OK http://www.nass.gov.ng/mp/profile/544

--- a/www.nass.gov.ng/d07bd3c9c4b95f273413134970b881a83fce7e10.yml
+++ b/www.nass.gov.ng/d07bd3c9c4b95f273413134970b881a83fce7e10.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 12:59:22 GMT
+    - Tue, 20 Jun 2017 09:01:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=KoqIWizP6w9GVRl%2C9J3PN2; path=/
+    - PHPSESSID=QXY9uyMopE%2CDP8YXKRs2D2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 12:59:22 GMT
+recorded_at: Tue, 20 Jun 2017 09:01:39 GMT
