--- a/www.nass.gov.ng/20cbeb332c3a9e941fa40fd2f16a7cf30d5a218b.yml
+++ b/www.nass.gov.ng/20cbeb332c3a9e941fa40fd2f16a7cf30d5a218b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 13:09:21 GMT
+    - Tue, 20 Jun 2017 09:12:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=BI1OMuIoNedp%2CFMQrGa3h1; path=/
+    - PHPSESSID=kXCxrVQiSKHOJ3ljxUKyz1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 13:09:21 GMT
+recorded_at: Tue, 20 Jun 2017 09:12:48 GMT
