--- a/www.nass.gov.ng/8010f57784f2dc84c0457efaa30f4b2e87a93a79.yml
+++ b/www.nass.gov.ng/8010f57784f2dc84c0457efaa30f4b2e87a93a79.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 13:13:18 GMT
+    - Tue, 20 Jun 2017 09:17:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=3NXAbfvNZMActIMYaRhPv2; path=/
+    - PHPSESSID=28eGU2ZfBCrJbdaVGk5%2CZ2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 13:13:18 GMT
+recorded_at: Tue, 20 Jun 2017 09:17:28 GMT
