--- a/www.nass.gov.ng/99d2ea1e878dc531fbbca3b6007eb4bef2d9f4d4.yml
+++ b/www.nass.gov.ng/99d2ea1e878dc531fbbca3b6007eb4bef2d9f4d4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 13:15:00 GMT
+    - Tue, 20 Jun 2017 09:18:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=liqEjRId17XbdRiKBbxc80; path=/
+    - PHPSESSID=IA-agQ8SnPf3gf%2C3sVBEl1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 13:15:00 GMT
+recorded_at: Tue, 20 Jun 2017 09:18:43 GMT
