--- a/www.nass.gov.ng/325aa062b074b1e45b95fbde3a031314d612f727.yml
+++ b/www.nass.gov.ng/325aa062b074b1e45b95fbde3a031314d612f727.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 13:15:18 GMT
+    - Tue, 20 Jun 2017 09:19:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=bnikDv66Ic0wW-Ll-Z6Sw0; path=/
+    - PHPSESSID=sDo3mJD2ovYK9oje4B%2Cxl0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 13:15:18 GMT
+recorded_at: Tue, 20 Jun 2017 09:19:04 GMT
