--- a/www.nass.gov.ng/2e773a4beaf0ae4a9cc18025f3a20d0184145e34.yml
+++ b/www.nass.gov.ng/2e773a4beaf0ae4a9cc18025f3a20d0184145e34.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 13:17:06 GMT
+    - Tue, 20 Jun 2017 09:20:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ehAqRnsaUVbogaMQ5sf530; path=/
+    - PHPSESSID=dvORehqdd8WP25%2CsWwqvj3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 13:17:06 GMT
+recorded_at: Tue, 20 Jun 2017 09:20:35 GMT
