--- a/www.nass.gov.ng/f8772fcbfd41176885498c0b48717bdd30dbb3cb.yml
+++ b/www.nass.gov.ng/f8772fcbfd41176885498c0b48717bdd30dbb3cb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 13:17:44 GMT
+    - Tue, 20 Jun 2017 09:21:41 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=bhMih-RHUf6Fe78iqXN%2Cs3; path=/
+    - PHPSESSID=j5EKXN8ADTFLXFwBxOxoZ3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 13:17:44 GMT
+recorded_at: Tue, 20 Jun 2017 09:21:41 GMT
