--- a/www.nass.gov.ng/ce5b57690617a9d50b13ef971be8127bd462c2e8.yml
+++ b/www.nass.gov.ng/ce5b57690617a9d50b13ef971be8127bd462c2e8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 13:28:41 GMT
+    - Tue, 20 Jun 2017 09:33:36 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=1g%2CV9z70H1cG4ZIKO6PzV3; path=/
+    - PHPSESSID=ofXKf--JGqsRIftULmN9C3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 13:28:41 GMT
+recorded_at: Tue, 20 Jun 2017 09:33:36 GMT
