--- a/www.nass.gov.ng/bd77c292a8fded410ada5a0f412ed577e051e358.yml
+++ b/www.nass.gov.ng/bd77c292a8fded410ada5a0f412ed577e051e358.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 13:38:55 GMT
+    - Tue, 20 Jun 2017 09:46:36 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=5dEnDxt7kArKAazRIZIyG3; path=/
+    - PHPSESSID=gFd%2CXwDcLuQEx83p2f-N40; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 13:38:55 GMT
+recorded_at: Tue, 20 Jun 2017 09:46:36 GMT
