--- a/www.nass.gov.ng/ebd13e7ca6585b73968bdd679cbd92ca80c87796.yml
+++ b/www.nass.gov.ng/ebd13e7ca6585b73968bdd679cbd92ca80c87796.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 13:41:28 GMT
+    - Tue, 20 Jun 2017 09:49:25 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=1UIJG2AGl9EC%2CZoodC7QP1; path=/
+    - PHPSESSID=AuXegFWeyKX1jAiTFV1VR2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 13:41:28 GMT
+recorded_at: Tue, 20 Jun 2017 09:49:25 GMT
