--- a/www.nass.gov.ng/d1c2a11ed1584625bda91a2743f6d0c5ccfc0902.yml
+++ b/www.nass.gov.ng/d1c2a11ed1584625bda91a2743f6d0c5ccfc0902.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 13:45:57 GMT
+    - Tue, 20 Jun 2017 09:55:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=fnO1x-kkfJpsrqukitOPy3; path=/
+    - PHPSESSID=zlnjP%2CIP7HtQrPPq8TlSq1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 13:45:57 GMT
+recorded_at: Tue, 20 Jun 2017 09:55:12 GMT
