--- a/www.nass.gov.ng/9849597009c6cbde454c18d753f1f2d516b77434.yml
+++ b/www.nass.gov.ng/9849597009c6cbde454c18d753f1f2d516b77434.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 13:47:10 GMT
+    - Tue, 20 Jun 2017 09:56:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=OTqCtdPKnMTZsWR4IwInl2; path=/
+    - PHPSESSID=qCMTlwnPKqs%2CBiRyrDDXf1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 13:47:10 GMT
+recorded_at: Tue, 20 Jun 2017 09:56:52 GMT
