--- a/www.nass.gov.ng/6412454cdffd05bfad8e7cffa185e7a5a375cd9c.yml
+++ b/www.nass.gov.ng/6412454cdffd05bfad8e7cffa185e7a5a375cd9c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 13:53:06 GMT
+    - Tue, 20 Jun 2017 10:01:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=w2Xzl3El59kF3ATIkO6KG3; path=/
+    - PHPSESSID=q0bwckV-ckYx%2CbIwZ02iq3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 13:53:06 GMT
+recorded_at: Tue, 20 Jun 2017 10:01:00 GMT
