--- a/www.nass.gov.ng/ad2c02f5d78bf5352eb81d6507763ccbfdaf706a.yml
+++ b/www.nass.gov.ng/ad2c02f5d78bf5352eb81d6507763ccbfdaf706a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 13:53:43 GMT
+    - Tue, 20 Jun 2017 10:01:54 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=WwuT4-yzgVAeAqbv8KJGy0; path=/
+    - PHPSESSID=EtcWjeBSI%2CgXLX2d-3S5d1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 13:53:43 GMT
+recorded_at: Tue, 20 Jun 2017 10:01:54 GMT
