--- a/www.nass.gov.ng/bee87c5d50858d964510c6225b5f11353caad010.yml
+++ b/www.nass.gov.ng/bee87c5d50858d964510c6225b5f11353caad010.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 13:54:36 GMT
+    - Tue, 20 Jun 2017 10:03:09 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=hwhzMKuXWyU6M%2CMKRSjuy3; path=/
+    - PHPSESSID=7DSCILJs2qdzquzGnTWrL0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 13:54:36 GMT
+recorded_at: Tue, 20 Jun 2017 10:03:10 GMT
