--- a/www.nass.gov.ng/23e541f20eac3f325439a1522985f6b8e2f140cf.yml
+++ b/www.nass.gov.ng/23e541f20eac3f325439a1522985f6b8e2f140cf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 13:58:48 GMT
+    - Tue, 20 Jun 2017 10:07:16 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=WRewYGbdYQoBjx27pAP8d3; path=/
+    - PHPSESSID=NuZV7BH0fm%2CU4p6X4z90%2C0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 13:58:48 GMT
+recorded_at: Tue, 20 Jun 2017 10:07:16 GMT
