--- a/www.nass.gov.ng/476351f6a5eecbf00fae19c0b77f078271524ad2.yml
+++ b/www.nass.gov.ng/476351f6a5eecbf00fae19c0b77f078271524ad2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 14:03:18 GMT
+    - Tue, 20 Jun 2017 10:11:11 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=VxmR-%2CTHfKicuwpc7yK7j3; path=/
+    - PHPSESSID=%2CzOHTuIj7xAqm0d47wJNh1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 14:03:18 GMT
+recorded_at: Tue, 20 Jun 2017 10:11:11 GMT
