--- a/www.nass.gov.ng/c2974c097a02062193c53bf051e0ace690dee604.yml
+++ b/www.nass.gov.ng/c2974c097a02062193c53bf051e0ace690dee604.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 14:04:51 GMT
+    - Tue, 20 Jun 2017 10:12:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=IUGwN9VaYPi5a1BfM%2CAy-0; path=/
+    - PHPSESSID=q1%2CEDHcwu2-a9ujrhD3bU1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 14:04:52 GMT
+recorded_at: Tue, 20 Jun 2017 10:12:07 GMT
