--- a/www.nass.gov.ng/9444e8ed87a1018b982f4e3b5668986441d7d571.yml
+++ b/www.nass.gov.ng/9444e8ed87a1018b982f4e3b5668986441d7d571.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 14:08:57 GMT
+    - Tue, 20 Jun 2017 10:16:05 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=DeGShz%2CYGerNTyDBv0Bxf3; path=/
+    - PHPSESSID=paB3YVxQrXKE9Bhyv%2CQLg3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 14:08:57 GMT
+recorded_at: Tue, 20 Jun 2017 10:16:05 GMT
