--- a/www.nass.gov.ng/bac816375258b589f00692d38186b54b5b4a8c57.yml
+++ b/www.nass.gov.ng/bac816375258b589f00692d38186b54b5b4a8c57.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 14:15:28 GMT
+    - Tue, 20 Jun 2017 10:21:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=d9-gag7DeY-%2CEvXSUZawb0; path=/
+    - PHPSESSID=XI7CYLwLcmYKRGuMYuEmF2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 14:15:28 GMT
+recorded_at: Tue, 20 Jun 2017 10:21:56 GMT
