--- a/www.nass.gov.ng/e23f0526dcfc236a7cf6cef56334d431deff7fb3.yml
+++ b/www.nass.gov.ng/e23f0526dcfc236a7cf6cef56334d431deff7fb3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 14:18:29 GMT
+    - Tue, 20 Jun 2017 10:24:46 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=YNvH1bfu7l-fTOtakb5vr2; path=/
+    - PHPSESSID=S49G%2CxgYc1Z1n1uYA79VE2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 14:18:29 GMT
+recorded_at: Tue, 20 Jun 2017 10:24:46 GMT
