--- a/www.nass.gov.ng/849376bfd6146a66aed2635e03b87ae6696b98f1.yml
+++ b/www.nass.gov.ng/849376bfd6146a66aed2635e03b87ae6696b98f1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 14:22:19 GMT
+    - Tue, 20 Jun 2017 10:30:22 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=C%2CoCUciXg2jpWzQe0tkpU3; path=/
+    - PHPSESSID=CpwwOtK1dEX9ICIPiJBIS1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 14:22:19 GMT
+recorded_at: Tue, 20 Jun 2017 10:30:22 GMT
