--- a/www.nass.gov.ng/59a632bb2a80b8b77cf3596cf6be53a6c06c4cc1.yml
+++ b/www.nass.gov.ng/59a632bb2a80b8b77cf3596cf6be53a6c06c4cc1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 14:23:20 GMT
+    - Tue, 20 Jun 2017 10:31:09 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Krcbb1c2j%2ChgyFjXxj-760; path=/
+    - PHPSESSID=P-qmq889kGtkNCtaoEaqt0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 14:23:20 GMT
+recorded_at: Tue, 20 Jun 2017 10:31:09 GMT
