--- a/www.nass.gov.ng/b1eda60160915e279f39885d0576a9122702b656.yml
+++ b/www.nass.gov.ng/b1eda60160915e279f39885d0576a9122702b656.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 14:30:08 GMT
+    - Tue, 20 Jun 2017 10:37:22 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=KTEk6PBEMg9sQrfOP1uk50; path=/
+    - PHPSESSID=iUE9u4Jio%2CQM2AWSMLjKo1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 14:30:08 GMT
+recorded_at: Tue, 20 Jun 2017 10:37:22 GMT
