--- a/www.nass.gov.ng/9e13a5401a9741ec5c17edcf74074efe15cff943.yml
+++ b/www.nass.gov.ng/9e13a5401a9741ec5c17edcf74074efe15cff943.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 14:30:43 GMT
+    - Tue, 20 Jun 2017 10:38:19 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=cBcxW8puPkzH8sMUpzR0b1; path=/
+    - PHPSESSID=7Fn%2Ci6PUifbd4NOAQJm9y0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 14:30:43 GMT
+recorded_at: Tue, 20 Jun 2017 10:38:19 GMT
