--- a/www.nass.gov.ng/fbc92e0393bc33d1c047e43c893ac0357415bf90.yml
+++ b/www.nass.gov.ng/fbc92e0393bc33d1c047e43c893ac0357415bf90.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 14:40:11 GMT
+    - Tue, 20 Jun 2017 10:48:13 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=b51Kvbd4emUgATlnbUyPS3; path=/
+    - PHPSESSID=9KAsy%2C6jpS6GAh9K0hw9h1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 14:40:11 GMT
+recorded_at: Tue, 20 Jun 2017 10:48:14 GMT
