--- a/www.nass.gov.ng/e28672ec42713d7e95a2cab7159f10538c6eee52.yml
+++ b/www.nass.gov.ng/e28672ec42713d7e95a2cab7159f10538c6eee52.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 14:40:30 GMT
+    - Tue, 20 Jun 2017 10:48:32 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=9uvVnXE6uyB1IKDqGs7oa3; path=/
+    - PHPSESSID=313m%2CfjNP82UfsGSn6sP50; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 14:40:30 GMT
+recorded_at: Tue, 20 Jun 2017 10:48:32 GMT
