--- a/www.nass.gov.ng/465778f0890dd1c68576e18c65548be52f010873.yml
+++ b/www.nass.gov.ng/465778f0890dd1c68576e18c65548be52f010873.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 14:41:37 GMT
+    - Tue, 20 Jun 2017 10:51:02 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=1Mee8YYbV-tCmZ8CVro%2CQ0; path=/
+    - PHPSESSID=YF1OP-N52W9dM2hOmoCM42; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 14:41:37 GMT
+recorded_at: Tue, 20 Jun 2017 10:51:02 GMT
