--- a/www.nass.gov.ng/2204a1f8329631bb9e07a5815e78f836c77754cf.yml
+++ b/www.nass.gov.ng/2204a1f8329631bb9e07a5815e78f836c77754cf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 14:49:20 GMT
+    - Tue, 20 Jun 2017 10:57:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=8ieBWrhhFlkpv%2CqjIIKWZ0; path=/
+    - PHPSESSID=C7CxN9ZYLyJj4jlOEa9wL1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 14:49:20 GMT
+recorded_at: Tue, 20 Jun 2017 10:57:39 GMT
