--- a/www.nass.gov.ng/028af9b422af9b733405780740bb40d295e9294b.yml
+++ b/www.nass.gov.ng/028af9b422af9b733405780740bb40d295e9294b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 14:54:48 GMT
+    - Tue, 20 Jun 2017 11:03:19 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=GwWicaZRppHbPp55%2CToaH0; path=/
+    - PHPSESSID=5VabhfOjqWwLH4vRLCT7z1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 14:54:48 GMT
+recorded_at: Tue, 20 Jun 2017 11:03:19 GMT
