--- a/www.nass.gov.ng/dbbfe5de3d74198e67bfb01f79e415ad4f7d6bef.yml
+++ b/www.nass.gov.ng/dbbfe5de3d74198e67bfb01f79e415ad4f7d6bef.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 14:56:17 GMT
+    - Tue, 20 Jun 2017 11:04:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=YfR%2CnudcLhmAIOz%2CsuW1e1; path=/
+    - PHPSESSID=2cEcJcTio5TqSrfAhO8uY1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 14:56:17 GMT
+recorded_at: Tue, 20 Jun 2017 11:04:52 GMT
