200 OK http://www.nass.gov.ng/mp/profile/956

--- a/www.nass.gov.ng/87ed6fef455ee412354ef09e133986d3897e7aaf.yml
+++ b/www.nass.gov.ng/87ed6fef455ee412354ef09e133986d3897e7aaf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 15:23:51 GMT
+    - Tue, 20 Jun 2017 11:29:06 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=qPEb5kA%2CCcAnJvjGpqpYx3; path=/
+    - PHPSESSID=u6LQDBeeniHenYKtl3TdT1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 15:23:51 GMT
+recorded_at: Tue, 20 Jun 2017 11:29:06 GMT
