200 OK http://www.nass.gov.ng/mp/profile/737

--- a/www.nass.gov.ng/b8e54a41f48c28ee816d37c2fa77504f144d0fcd.yml
+++ b/www.nass.gov.ng/b8e54a41f48c28ee816d37c2fa77504f144d0fcd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 15:33:28 GMT
+    - Tue, 20 Jun 2017 11:37:37 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=-rf-I-wH7Pwqtf2tOZ0tp1; path=/
+    - PHPSESSID=TwHs%2C7vr2DGplFFMKKFFA1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 15:33:28 GMT
+recorded_at: Tue, 20 Jun 2017 11:37:37 GMT
