200 OK http://www.nass.gov.ng/mp/profile/855

--- a/www.nass.gov.ng/48fd4be53b69f8057146838684af4f78cdd5c9f0.yml
+++ b/www.nass.gov.ng/48fd4be53b69f8057146838684af4f78cdd5c9f0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 01:37:22 GMT
+    - Thu, 22 Jun 2017 19:26:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Al1rg-Y-meV6QqUo4vNMd0; path=/
+    - PHPSESSID=IoU1LXSGo%2CnFf7rrrJeRK3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 01:37:22 GMT
+recorded_at: Thu, 22 Jun 2017 19:26:24 GMT
