200 OK http://www.nass.gov.ng/mp/profile/563

--- a/www.nass.gov.ng/35957b2e246a187dd4c9ee88796f8296d4c108cf.yml
+++ b/www.nass.gov.ng/35957b2e246a187dd4c9ee88796f8296d4c108cf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 01:47:35 GMT
+    - Thu, 22 Jun 2017 19:36:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=TBuVa%2CTEpV2CHA%2CDHm%2CK-1; path=/
+    - PHPSESSID=Wmykee4qI%2C4bn2orCoM7B1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 01:47:35 GMT
+recorded_at: Thu, 22 Jun 2017 19:36:24 GMT
