200 OK http://www.nass.gov.ng/mp/profile/534

--- a/www.nass.gov.ng/abcd883fbfadf2868b3440aebca41cf8190de939.yml
+++ b/www.nass.gov.ng/abcd883fbfadf2868b3440aebca41cf8190de939.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 02:26:24 GMT
+    - Thu, 22 Jun 2017 20:09:37 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=GgmzYn2f8DfiPh%2CBna7ae0; path=/
+    - PHPSESSID=K2Myn9mnRY6XT-1E%2C1QjQ3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 02:26:24 GMT
+recorded_at: Thu, 22 Jun 2017 20:09:37 GMT
