200 OK http://www.nass.gov.ng/mp/profile/694

--- a/www.nass.gov.ng/280b97d0b8eac21d02bac4519dbe75fea12e6096.yml
+++ b/www.nass.gov.ng/280b97d0b8eac21d02bac4519dbe75fea12e6096.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 20:14:03 GMT
+    - Fri, 23 Jun 2017 23:06:27 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=lfHJBmniXE01Xc-2GKmLd2; path=/
+    - PHPSESSID=9LGFei%2CgUkm2euYzJDa2p3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 20:14:03 GMT
+recorded_at: Fri, 23 Jun 2017 23:06:27 GMT
