200 OK http://www.nass.gov.ng/mp/profile/838

--- a/www.nass.gov.ng/e0e825e9844cf3dbb9559e28c453c4ad20f1ff29.yml
+++ b/www.nass.gov.ng/e0e825e9844cf3dbb9559e28c453c4ad20f1ff29.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 22:13:33 GMT
+    - Sat, 24 Jun 2017 01:15:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=eEPRy%2C33i3yengZl7a6Qf2; path=/
+    - PHPSESSID=9Jvue6ge4wKUjDMfGLMtm1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 22:13:33 GMT
+recorded_at: Sat, 24 Jun 2017 01:15:53 GMT
