200 OK http://www.nass.gov.ng/mp/profile/876

--- a/www.nass.gov.ng/c10061d882169e56af3a1363d4ec62097f884d6f.yml
+++ b/www.nass.gov.ng/c10061d882169e56af3a1363d4ec62097f884d6f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 23:25:49 GMT
+    - Sat, 24 Jun 2017 02:24:32 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=LUHhdFbVxMcJuw1-eLt4Y0; path=/
+    - PHPSESSID=5QMp%2CT0FHRTZyJB2ybJHy1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 23:25:49 GMT
+recorded_at: Sat, 24 Jun 2017 02:24:32 GMT
